--- a/includes/index.pug
+++ b/includes/index.pug
@@ -118,10 +118,10 @@ block content
             div.icon.zaycev.fm
             a(href='https://www.zaycev.fm/', target='_blank') zaycev.fm
           // тут реклама от ГУГЛ
-          script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
-          ins.adsbygoogle(style='display:inline-block;width:234px;height:60px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='4257475217')
-          script.
-            (adsbygoogle = window.adsbygoogle || []).push({});
+          //- script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+          //- ins.adsbygoogle(style='display:inline-block;width:234px;height:60px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='4257475217')
+          //- script.
+          //-   (adsbygoogle = window.adsbygoogle || []).push({});
           // тут реклама от ГУГЛ
     .col-sm
       .group
@@ -230,10 +230,10 @@ block content
             a(href='https://www.bestchange.ru/', target='_blank') bestchange.ru
             span.opisi Обмен валют
           // тут реклама от ГУГЛ
-          script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
-          ins.adsbygoogle(style='display:inline-block;width:234px;height:60px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='4257475217')
-          script.
-            (adsbygoogle = window.adsbygoogle || []).push({});
+          //- script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+          //- ins.adsbygoogle(style='display:inline-block;width:234px;height:60px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='4257475217')
+          //- script.
+          //-   (adsbygoogle = window.adsbygoogle || []).push({});
           // тут реклама от ГУГЛ
     .col-sm
       .group
@@ -334,10 +334,10 @@ block content
             a(href='https://vshkole.com/', target='_blank') vshkole
             span.opisi ГДЗ/учебники
           // тут реклама от ГУГЛ
-          script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
-          ins.adsbygoogle(style='display:inline-block;width:234px;height:60px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='4257475217')
-          script.
-            (adsbygoogle = window.adsbygoogle || []).push({});
+          //- script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+          //- ins.adsbygoogle(style='display:inline-block;width:234px;height:60px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='4257475217')
+          //- script.
+          //-   (adsbygoogle = window.adsbygoogle || []).push({});
           // тут реклама от ГУГЛ
     .col-sm
       .group
@@ -400,8 +400,8 @@ block content
             a(href='https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4', target='_blank') master-plus.com.ua`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет магазин запчастей для стиральных машин, холодильников и другой бытовой техники. ТМ Мастер-Плюс', alt='')
           // тут реклама от ГУГЛ
-          script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
-          ins.adsbygoogle(style='display:inline-block;width:250px;height:360px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='8204636692')
-          script.
-            (adsbygoogle = window.adsbygoogle || []).push({});
+          //- script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+          //- ins.adsbygoogle(style='display:inline-block;width:250px;height:360px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='8204636692')
+          //- script.
+          //-   (adsbygoogle = window.adsbygoogle || []).push({});
           // тут реклама от ГУГЛ
