--- a/includes/index.pug
+++ b/includes/index.pug
@@ -1,10 +1,10 @@
 extends _layout.pug
   
 block title
-  title Главная
+  title ZAKLADKI
 
 block menu
-  - var current = 'Главная'
+  - var current = 'ZAKLADKI'
   - var current_iclass = 'fas fa-home'
   include _nav.pug
   
@@ -384,6 +384,14 @@ block content
           a(href='http://zakladki.at.ua/')
             span.badge.badge-danger Обнова в закладках: v.2019-03-13
         ul
+          li
+            div.icon.a0pencil-1(title='Полезная информация', alt='')
+            a(href='https://www.bbc.com/ukrainian/features-russian-41112484', target='_blank') ТВ-карта Украины.
+            div.icontooinfo.a0repa3(title='Кто с чем подходит к выборам. Судьбу предстоящих президентских выборов все еще будет решать поддержка ключевых телеканалов страны, хотя интернет составит серьезную конкуренцию телевизору.', alt='')
+          li
+            div.icon.a0youtubeinform(title='Полезная информация', alt='')
+            a(href='https://www.youtube.com/watch?v=A25RRbUh4Ws', target='_blank') Список виборців.
+            div.icontooinfo.a0repa3(title='Дізнайся чи є ти в списках виборців? Непроєвибори! Переходь на сайт: drv.gov.ua', alt='')
           li
             div.icon.florium.ua
             div.icontooinfo.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
