--- a/includes/index.pug
+++ b/includes/index.pug
@@ -4,7 +4,7 @@ block title
   title ZAKLADKI
 
 block menu
-  - var current = 'ZAKLADKI'
+  - var current = 'Главная'
   - var current_iclass = 'fas fa-home'
   include _nav.pug
   
@@ -382,7 +382,7 @@ block content
       .group
         .group-title
           a(href='http://zakladki.at.ua/')
-            span.badge.badge-danger Обнова в закладках: v.2019-03-13
+            span.badge.badge-danger Обнова в закладках: v.2019-03-20
         ul
           li
             div.icon.a0pencil-1(title='Полезная информация', alt='')
