--- a/includes/index.pug
+++ b/includes/index.pug
@@ -385,26 +385,28 @@ block content
             span.badge.badge-danger Обнова в закладках: v.2019-03-20
         ul
           li
+            div.icon.a0info-opis5
             div.icon.a0pencil-1(title='Полезная информация', alt='')
             a(href='https://www.bbc.com/ukrainian/features-russian-41112484', target='_blank') ТВ-карта Украины.
             div.icontooinfo.a0repa3(title='Кто с чем подходит к выборам. Судьбу предстоящих президентских выборов все еще будет решать поддержка ключевых телеканалов страны, хотя интернет составит серьезную конкуренцию телевизору.', alt='')
           li
+            div.icon.a0info-opis5
             div.icon.a0youtubeinform(title='Полезная информация', alt='')
             a(href='https://www.youtube.com/watch?v=A25RRbUh4Ws', target='_blank') Список виборців.
             div.icontooinfo.a0repa3(title='Дізнайся чи є ти в списках виборців? Непроєвибори! Переходь на сайт: drv.gov.ua', alt='')
           li
             div.icon.florium.ua
-            div.icontooinfo.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             a(href='https://letyshops.com/r/florium-ua-4qh7st5ocnmsoc', target='_blank') florium.ua`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Флориум - Интернет магазин семян, саженцев садовых, комнатных растений и цветов в Украине.', alt='')
           li
             div.icon.med-magazin.ua
-            div.icontooinfo.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             a(href='https://letyshops.com/r/med-magazin-ua-4qh7st5oclk40c', target='_blank') med-magazin.ua`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине', alt='')
           li
             div.icon.master-plus.com.ua
-            div.icontooinfo.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             a(href='https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4', target='_blank') master-plus.com.ua`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет магазин запчастей для стиральных машин, холодильников и другой бытовой техники. ТМ Мастер-Плюс', alt='')
           // тут реклама от ГУГЛ
