--- a/includes/index.pug
+++ b/includes/index.pug
@@ -385,13 +385,13 @@ block content
             span.badge.badge-danger Обнова в закладках: v.2019-03-20
         ul
           li
-            div.icon.a0info-opis5
-            div.icon.a0pencil-1(title='Полезная информация', alt='')
+            div.icon.a0info-opis5(title='Полезная информация', alt='')
+            div.icon.a0pencil-1(title='Текстовая информация', alt='')
             a(href='https://www.bbc.com/ukrainian/features-russian-41112484', target='_blank') ТВ-карта Украины.
             div.icontooinfo.a0repa3(title='Кто с чем подходит к выборам. Судьбу предстоящих президентских выборов все еще будет решать поддержка ключевых телеканалов страны, хотя интернет составит серьезную конкуренцию телевизору.', alt='')
           li
-            div.icon.a0info-opis5
-            div.icon.a0youtubeinform(title='Полезная информация', alt='')
+            div.icon.a0info-opis5(title='Полезная информация', alt='')
+            div.icon.a0youtubeinform(title='Видео информация', alt='')
             a(href='https://www.youtube.com/watch?v=A25RRbUh4Ws', target='_blank') Список виборців.
             div.icontooinfo.a0repa3(title='Дізнайся чи є ти в списках виборців? Непроєвибори! Переходь на сайт: drv.gov.ua', alt='')
           li
