--- a/includes/media.pug
+++ b/includes/media.pug
@@ -126,7 +126,7 @@ block content
             div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
           li
             div.icon.web.telegram.org
-            a(href='https://t.me/hit_beat', target='_blank') t/hit_bit
+            a(href='https://t.me/music_breakbeat', target='_blank') t/hit_bit
             i.fainfo.fab.fa-telegram
       .group
         .group-title
