--- a/includes/others.pug
+++ b/includes/others.pug
@@ -182,7 +182,7 @@ block content
             span.opisi Библия онлайн
           li
             div.icon.bible-teka.com
-            a(href='https://bible-teka.com/', target='_blank') bible-teka.com
+            a(href='https://bible-teka.com/synodal/', target='_blank') bible-teka.com
             span.opisi Библия онлайн
           li
             div.icon.bible.by
