--- a/includes/index.pug
+++ b/includes/index.pug
@@ -324,7 +324,7 @@ block content
             div.icontooinfo.a0_Group_m(title='Для скачивания нужна программа TORRENT', alt='')
           li
             div.icon.bible-teka.com
-            a(href='https://bible-teka.com/', target='_blank') bible-teka
+            a(href='https://bible-teka.com/synodal/', target='_blank') bible-teka
             span.opisi Библия онлайн
           li
             div.icon.slovohrista.org
@@ -381,7 +381,7 @@ block content
             a(href='http://rada-novomirgorod.gov.ua/', target='_blank') Новом-ка міська рада
       .group
         .group-title
-          a(href='http://zakladki.at.ua/')
+          a(href='http://zakladki.at.ua/', target='_blank')
             span.badge.badge-danger Обнова в закладках: v.2019-03-20
         ul
           li
