--- a/includes/index.pug
+++ b/includes/index.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
   
 block title
-  title ZAKLADKI
+  title ZAKLADKI - Список популярных сайтов (ТОП ЗАКЛАДКИ)
 
 block menu
   - var current = 'Главная'
