--- a/includes/index.pug
+++ b/includes/index.pug
@@ -387,12 +387,12 @@ block content
           li
             div.icon.a0info-opis5(title='Полезная информация', alt='')
             div.icon.a0pencil-1(title='Текстовая информация', alt='')
-            a(href='https://www.bbc.com/ukrainian/features-russian-41112484', target='_blank') ТВ-карта Украины.
-            div.icontooinfo.a0repa3(title='Кто с чем подходит к выборам. Судьбу предстоящих президентских выборов все еще будет решать поддержка ключевых телеканалов страны, хотя интернет составит серьезную конкуренцию телевизору.', alt='')
+            a(href='https://www.bbc.com/ukrainian/features-russian-41112484', target='_blank') ТВ-карта Украины
+            div.icontooinfo.a0repa3(title='Какие каналы ТВ на кого работают. Кто с чем подходит к выборам.', alt='')
           li
             div.icon.a0info-opis5(title='Полезная информация', alt='')
             div.icon.a0youtubeinform(title='Видео информация', alt='')
-            a(href='https://www.youtube.com/watch?v=A25RRbUh4Ws', target='_blank') Список виборців.
+            a(href='https://www.youtube.com/watch?v=A25RRbUh4Ws', target='_blank') Список виборців
             div.icontooinfo.a0repa3(title='Дізнайся чи є ти в списках виборців? Непроєвибори! Переходь на сайт: drv.gov.ua', alt='')
           li
             div.icon.florium.ua
