--- a/includes/shops.pug
+++ b/includes/shops.pug
@@ -124,7 +124,7 @@ block content
             a(href='https://letyshops.com/r/baza-avtozvuka-4qh7st5csyassk', target='_blank') avtozvuk.ua`
           li
             div.icon.autoklad.ua
-            a(href='https://letyshops.com/r/avtoklad-ua-4qh7st5csyassk', target='_blank') autoklad.ua`
+            a(href='https://www.autoklad.ua/', target='_blank') autoklad.ua
           li
             div.icon.avtoopt.in.ua
             a(href='https://letyshops.com/r/avtoopt-ua-4qh7st5csyeckc', target='_blank') avtoopt.in.ua`
