--- a/includes/_layout.pug
+++ b/includes/_layout.pug
@@ -28,7 +28,7 @@ html(lang="ru")
       meta(name='description', content='Полный список самых популярных сайтов интернета. Удобный каталог сайтов с сортировкой по тематике. Все топ сайты в одном месте. Все для удобства в интернете.')
     script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js', integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo', crossorigin='anonymous')
     // Player-top
-    script(src='https://zakladki.github.io/playerjs.js', type='text/javascript')
+    script(src='//zakladki.github.io/playerjs.js', type='text/javascript')
     // Bootstrap CSS
     link(href='styles/bootstrap.min.css', rel='stylesheet')
     link(href='styles/all.css', rel='stylesheet')
