--- a/includes/index.pug
+++ b/includes/index.pug
@@ -415,9 +415,9 @@ block content
             a(href='https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4', target='_blank') master-plus.com.ua`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет магазин запчастей для стиральных машин, холодильников и другой бытовой техники. ТМ Мастер-Плюс', alt='')
           // тут код плеера
-          #player(style='height:80px')
+          #player(style='height:75px;width:240px')
             script.
-              var player = new Playerjs({id:"player", file:"https://zakladki.github.io/playlist.txt"});
+                var player = new Playerjs({id:"player", file:"https://zakladki.github.io/playlist.txt"});
           // тут реклама от ГУГЛ
           //- script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
           //- ins.adsbygoogle(style='display:inline-block;width:250px;height:360px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='8204636692')
