--- a/includes/index.pug
+++ b/includes/index.pug
@@ -382,13 +382,18 @@ block content
       .group
         .group-title
           a(href='http://zakladki.at.ua/', target='_blank')
-            span.badge.badge-danger Обнова в закладках: v.2019-03-20
+            span.badge.badge-danger Обнова в закладках: v.2019-03-21
         ul
           //- li
           //-   div.icon.a0info-opis5(title='Полезная информация', alt='')
           //-   div.icon.a0youtubeinform(title='Видео информация', alt='')
           //-   a(href='https://www.youtube.com/', target='_blank') Настройка ZAKLADOK
           //-   div.icontooinfo.a0repa3(title='Как быстро настроить ZAKLADKI на компьютере, ноутбуке, смартфоне', alt='')
+          li
+            div.icon.a0info-opis5(title='Полезная информация', alt='')
+            div.icon.a0youtubeinform(title='Аудио информация', alt='')
+            a(href='https://zakladki.github.io/media.html', target='_blank') Добавлен MP3 плеер
+            div.icontooinfo.a0repa3(title='Раздел-Медиа. Добавлен плеер для прослушивания музыки ТОП-100 (позже будет ТОП-200)', alt='')
           li
             div.icon.a0info-opis5(title='Полезная информация', alt='')
             div.icon.a0pencil-1(title='Текстовая информация', alt='')
