--- a/includes/media.pug
+++ b/includes/media.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
   
 block title
-  title Медиа
+  title Медиа - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)
 
 block menu
   - var current = 'Медиа'
