--- a/includes/programs.pug
+++ b/includes/programs.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
   
 block title
-  title Программы
+  title Программы - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)
 
 block menu
   - var current = 'Программы'
