--- a/includes/bank.pug
+++ b/includes/bank.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
   
 block title
-  title Банкинг
+  title Банкинг - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)
 
 block menu
   - var current = 'Банкинг'
