--- a/includes/city.pug
+++ b/includes/city.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
   
 block title
-  title Городок
+  title Городок - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)
 
 block menu
   - var current = 'Городок'
