--- a/includes/communal.pug
+++ b/includes/communal.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
   
 block title
-  title Комуналка
+  title Комуналка - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)
 
 block menu
   - var current = 'Комуналка'
