--- a/includes/games.pug
+++ b/includes/games.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
   
 block title
-  title Игры
+  title Игры - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)
 
 block menu
   - var current = 'Игры'
