--- a/includes/market.pug
+++ b/includes/market.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
   
 block title
-  title Рынок
+  title Рынок - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)
 
 block menu
   - var current = 'Рынок'
