--- a/includes/index.pug
+++ b/includes/index.pug
@@ -391,7 +391,7 @@ block content
             div.icontooinfo.a0repa3(title='Как быстро настроить ZAKLADKI на компьютере, ноутбуке, смартфоне', alt='')
           li
             div.icon.a0info-opis5(title='Полезная информация', alt='')
-            div.icon.a0youtubeinform(title='Аудио информация', alt='')
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             a(href='https://zakladki.github.io/media.html', target='_blank') Добавлен MP3 плеер
             div.icontooinfo.a0repa3(title='Раздел-Медиа. Добавлен плеер для прослушивания музыки ТОП-100 (позже будет ТОП-200)', alt='')
           li
