--- a/includes/index.pug
+++ b/includes/index.pug
@@ -382,12 +382,12 @@ block content
       .group
         .group-title
           a(href='http://zakladki.at.ua/', target='_blank')
-            span.badge.badge-danger Обнова в закладках: v.2019-03-21
+            span.badge.badge-danger Обнова в закладках: v.2019-03-22
         ul
           li
             div.icon.a0info-opis5(title='Полезная информация', alt='')
             div.icon.a0youtubeinform(title='Видео информация', alt='')
-            a(href='https://www.youtube.com/watch?v=IiLNEBWq6E0&feature=youtu.be', target='_blank') Настройка ZAKLADOK
+            a(href='https://youtu.be/BdZQy6upWFc', target='_blank') Настройка ZAKLADOK
             div.icontooinfo.a0repa3(title='Как быстро настроить ZAKLADKI на компьютере, ноутбуке, смартфоне', alt='')
           li
             div.icon.a0info-opis5(title='Полезная информация', alt='')
