--- a/includes/shops.pug
+++ b/includes/shops.pug
@@ -182,7 +182,7 @@ block content
             a(href='https://letyshops.com/r/yves-rocher-ua-4qh7st5csyyo0k', target='_blank') yves-rocher.ua`
           li
             div.icon.bomond.com.ua
-            a(href='https://letyshops.com/r/bomond-4qh7st5csyyo0k', target='_blank') bomond.com.ua`
+            a(href='https://bomond.com.ua/', target='_blank') bomond.com.ua
           li
             div.icon.ostrivkrasy.com
             a(href='https://letyshops.com/r/ostriv-krasi-4qh7st5csyyo0g', target='_blank') ostrivkrasy.com`
