--- a/includes/index.pug
+++ b/includes/index.pug
@@ -382,13 +382,18 @@ block content
       .group
         .group-title
           a(href='http://zakladki.at.ua/', target='_blank')
-            span.badge.badge-danger Обнова в закладках: v.2019-03-22
+            span.badge.badge-danger Обнова в закладках: v.2019-03-23
         ul
           li
             div.icon.a0info-opis5(title='Полезная информация', alt='')
             div.icon.a0youtubeinform(title='Видео информация', alt='')
             a(href='https://youtu.be/BdZQy6upWFc', target='_blank') Настройка ZAKLADOK
             div.icontooinfo.a0repa3(title='Как быстро настроить ZAKLADKI на компьютере, ноутбуке, смартфоне', alt='')
+          li
+            div.icon.costaction.com
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            a(href='http://costaction.com/partner/?PHPSESUD=CEADEE4DA51FAECA3ED6C17C6A9191A5', target='_blank') Хранилище файлов`
+            div.icontooinfo.a0repa3(title='Раздел-Программы. Вы будете получать деньги за каждое скачивание Вашего файла. Просто загрузите файлы на Turbobit.net и Hitfile.net, обменивайтесь ими со своим друзьями, и незнакомцами через блоги, социальные сети, форумы или свои сайты!', alt='')
           li
             div.icon.a0info-opis5(title='Полезная информация', alt='')
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
