--- a/includes/programs.pug
+++ b/includes/programs.pug
@@ -24,6 +24,15 @@ block content
 
       .group
         .group-title
+          span.badge.badge-warning Всяки настройки
+        ul
+          li
+            div.icon.a0youtubeinform(title='Видео информация', alt='')
+            a(href='https://youtu.be/BdZQy6upWFc', target='_blank') Настройка сайта ZAKLADOK
+            div.icontooinfo.a0repa3(title='Как быстро настроить ZAKLADKI на компьютере, ноутбуке, смартфоне', alt='')
+
+      .group
+        .group-title
           span.badge.badge-warning Торрент-программы
         ul
           li
