--- a/includes/_layout.pug
+++ b/includes/_layout.pug
@@ -101,7 +101,6 @@ html(lang="ru")
                 "' alt='' title='LiveInternet: показано число просмотров и" +
                 " посетителей за 24 часа' " +
                 "border='0' width='88' height='31'>")
-
               // I.UA counter
               a(href='https://www.i.ua/', target='_blank', onclick="this.href='https://i.ua/r.php?225197';", title='Rated by I.UA')
                 script(type='text/javascript').
@@ -117,24 +116,9 @@ html(lang="ru")
                   iS+='&r'+escape(iH);
                   iD.write('<img src="'+iS+'" border="0" width="88" height="31" />');
                   //-->
-              // End of I.UA counter
-
-              //- MyCounter v.2.0
-              script(type='text/javascript').
-                <!--
-                my_id = 168151;
-                my_width = 88;
-                my_height = 31;
-                my_alt = "MyCounter - счётчик и статистика";
-                //-->
-              script(type='text/javascript', src='https://get.mycounter.ua/counter2.0.js')
-              noscript
-                a(target='_blank', href='https://mycounter.ua/')
-                  img(src='https://get.mycounter.ua/counter.php?id=168151', title='MyCounter - счётчик и статистика', alt='', width='88', height='31', border='0')
-              //- MyCounter
           .col-sm.footer-col
             .kolobok
-              a(href='http://zakladki.at.ua/', target='_blank') Беседка
+              a(href='http://zakladki.at.ua/', target='_blank') Беседка.
               |  / 
               a(href='http://zakladki.at.ua/index/0-3', target='_blank') Задать вопрос
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js', integrity='sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut', crossorigin='anonymous')
