--- a/includes/index.pug
+++ b/includes/index.pug
@@ -10,7 +10,7 @@ block menu
   
 block meta
   meta(name='keywords', content='лучшие сайты, популярные сайты, каталог сайтов, быстрые ссылки, cписок найпопулярніших веб-сайтів, топ сайтів, speeddial, новости, соцсети, видео, погода')
-  //- meta(name='description', content='Полный список самых популярных сайтов интернета. Удобный каталог сайтов с сортировкой по тематике. Все топ сайты в одном месте. Все для удобства в интернете.')
+  meta(name='description', content='Полный список самых популярных сайтов интернета. Удобный каталог сайтов с сортировкой по тематике. Все топ сайты в одном месте. Все для удобства в интернете.')
   
 block content
   .row.animated.fadeIn
