--- a/includes/index.pug
+++ b/includes/index.pug
@@ -9,7 +9,7 @@ block menu
   include _nav.pug
   
 block meta
-  meta(name='keywords', content='лучшие сайты, популярные сайты, каталог сайтов, быстрые ссылки, cписок найпопулярніших веб-сайтів, топ сайтів, speeddial, новости, соцсети, видео, погода')
+  meta(name='keywords', content='best sait, лучшие сайты, популярные сайты, каталог сайтов, быстрые ссылки, cписок найпопулярніших веб-сайтів, топ сайтів, speeddial, новости, соцсети, видео, погода')
   meta(name='description', content='Полный список самых популярных сайтов интернета. Удобный каталог сайтов с сортировкой по тематике. Все топ сайты в одном месте. Все для удобства в интернете.')
   
 block content
@@ -396,7 +396,7 @@ block content
             div.icontooinfo.a0repa3(title='Раздел-Программы. Вы будете получать деньги за каждое скачивание Вашего файла. Просто загрузите файлы на Turbobit.net и Hitfile.net, обменивайтесь ими со своим друзьями, и незнакомцами через блоги, социальные сети, форумы или свои сайты!', alt='')
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
-            div.icon.a0info-opis5(title='Полезная информация', alt='')
+            div.icon.a0youtubeinform(title='Видео информация', alt='')
             a(href='https://zakladki.github.io/media.html', target='_blank') Добавлен MP3 плеер
             div.icontooinfo.a0repa3(title='Раздел-Медиа. Добавлен плеер для прослушивания музыки ТОП-100 (позже будет ТОП-200)', alt='')
           li
