--- a/includes/_layout.pug
+++ b/includes/_layout.pug
@@ -111,9 +111,9 @@ html(lang="ru")
                 hot_d = document.getElementById('hotlog_dyn');
                 hot_d.appendChild(hot_s);
               noscript
-              a(href='http://click.hotlog.ru/?2575836', target='_blank')
-                img(src='http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&im=606', border='0', alt='HotLog')
-
+                a(href='http://click.hotlog.ru/?2575836', target='_blank')
+                  img(src='http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&im=605', border='0', alt='HotLog')
+              // /HotLog
           .col-sm.footer-col
             .kolobok
               a(href='http://zakladki.at.ua/', target='_blank') Беседка
