--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,7 @@
+.coloriconfuter {
+  color: #309286;
+}
+
 a span.badge.badge-danger:hover {
   background-color: #007bff;
   -webkit-transition: 0.2s;
