--- a/includes/_layout.pug
+++ b/includes/_layout.pug
@@ -89,7 +89,7 @@ html(lang="ru")
               a(href='https://telegram.me/zakladki_top', target='_blank', title='Telegram: https://t.me/zakladki_top')
                 i.fab.fa-telegram.fa-lg(aria-hidden='true')
               a(href='https://youtu.be/BdZQy6upWFc', target='_blank', title='Видеоинструкция: автозапуск ZAKLADOK')
-                i.fab.fa-autoprefixer.fa-lg(aria-hidden='true')
+                i.fas.fa-medkit.fa-lg.coloriconfuter(aria-hidden='true')
           .col-sm.footer-col
             .kolobok
               //- LiveInternet counter
