--- a/includes/_layout.pug
+++ b/includes/_layout.pug
@@ -103,6 +103,19 @@ html(lang="ru")
                 "' alt='' title='LiveInternet: показано число просмотров и" +
                 " посетителей за 24 часа' " +
                 "border='0' width='88' height='31'>")
+              //- MyCounter v.2.0
+              script(type='text/javascript').
+                <!--
+                my_id = 168151;
+                my_width = 88;
+                my_height = 31;
+                my_alt = "MyCounter - счётчик и статистика";
+                //-->
+              script(type='text/javascript', src='https://get.mycounter.ua/counter2.0.js')
+              noscript
+                a(target='_blank', href='https://mycounter.ua/')
+                  img(src='https://get.mycounter.ua/counter.php?id=168151', title='MyCounter - счётчик и статистика', alt='', width='88', height='31', border='0')
+              //- MyCounter      
               // HotLog
                 span#hotlog_counter
                 span#hotlog_dyn
@@ -114,8 +127,9 @@ html(lang="ru")
                 hot_d.appendChild(hot_s);
               noscript
               a(href='http://click.hotlog.ru/?2575836', target='_blank')
-                img(src='http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&im=606', border='0', alt='HotLog')
+                img(src='http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&im=605', border='0', width='1', height='1', alt='HotLog')
               // /HotLog
+
           .col-sm.footer-col
             .kolobok
               a(href='http://zakladki.at.ua/', target='_blank') Беседка
