--- a/includes/_layout.pug
+++ b/includes/_layout.pug
@@ -61,16 +61,6 @@ html(lang="ru")
           .col-sm.footer-col
             .kolobok
               a.btn.btn-primary.btn-sm(href='https://www.ipay.ua/ru/p2p/default/constructor/01e03758f825e60c5dc13b12941f5ddf', title='Переслать немного денег на содержание сайта (заранее СПАСИБО Всем кто перекинет деньжат)', role='button', target='_blank') Поддержать сайт
-              // LiveInternet counter
-              script(type='text/javascript').
-                document.write("<a href='//www.liveinternet.ru/click' "+
-                "target=_blank><img src='//counter.yadro.ru/hit?t41.10;r"+
-                escape(document.referrer)+((typeof(screen)=="undefined")?"":
-                ";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?
-                screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
-                ";h"+escape(document.title.substring(0,150))+";"+Math.random()+
-                "' alt='' title='LiveInternet' "+
-                "border='0' width='31' height='31'>")
 
           .col-sm.footer-col
             .kolobok
@@ -105,17 +95,17 @@ html(lang="ru")
                   
           .col-sm.footer-col
             .kolobok
-              //- //- LiveInternet counter
-              //- script(type='text/javascript').
-              //-   document.write("<a href='//www.liveinternet.ru/click' " +
-              //-   "target=_blank><img src='//counter.yadro.ru/hit?t52.10;r" +
-              //-   escape(document.referrer) + ((typeof(screen) == "undefined") ? "" :
-              //-   ";s" + screen.width + "*" + screen.height + "*" + (screen.colorDepth ?
-              //-   screen.colorDepth : screen.pixelDepth)) + ";u" + escape(document.URL) +
-              //-   ";h" + escape(document.title.substring(0, 150)) + ";" + Math.random() +
-              //-   "' alt='' title='LiveInternet: показано число просмотров и" +
-              //-   " посетителей за 24 часа' " +
-              //-   "border='0' width='88' height='31'>")
+              //- LiveInternet counter
+              script(type='text/javascript').
+                document.write("<a href='//www.liveinternet.ru/click' " +
+                "target=_blank><img src='//counter.yadro.ru/hit?t52.10;r" +
+                escape(document.referrer) + ((typeof(screen) == "undefined") ? "" :
+                ";s" + screen.width + "*" + screen.height + "*" + (screen.colorDepth ?
+                screen.colorDepth : screen.pixelDepth)) + ";u" + escape(document.URL) +
+                ";h" + escape(document.title.substring(0, 150)) + ";" + Math.random() +
+                "' alt='' title='LiveInternet: показано число просмотров и" +
+                " посетителей за 24 часа' " +
+                "border='0' width='88' height='31'>")
 
               //- MyCounter v.2.0
               script(type='text/javascript').
@@ -130,7 +120,7 @@ html(lang="ru")
                 a(target='_blank', href='https://mycounter.ua/')
                   img(src='https://get.mycounter.ua/counter.php?id=168151', title='MyCounter - счётчик и статистика', alt='', width='88', height='31', border='0')
    
-              // HotLog
+              // HotLog невидимка
               span#hotlog_counter
               span#hotlog_dyn
               script(type='text/javascript').
@@ -141,7 +131,20 @@ html(lang="ru")
                 hot_d.appendChild(hot_s);
               noscript
               a(href='http://click.hotlog.ru/?2575836', target='_blank')
-                img(src='http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&im=605', border='0', alt='HotLog')
+                img(src='http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&im=605', border='0', width='1', height='1', alt='HotLog')
+   
+              //- // HotLog видимый
+              //- span#hotlog_counter
+              //- span#hotlog_dyn
+              //- script(type='text/javascript').
+              //-   var hot_s = document.createElement('script');
+              //-   hot_s.type = 'text/javascript'; hot_s.async = true;
+              //-   hot_s.src = 'http://js.hotlog.ru/dcounter/2575836.js';
+              //-   hot_d = document.getElementById('hotlog_dyn');
+              //-   hot_d.appendChild(hot_s);
+              //- noscript
+              //- a(href='http://click.hotlog.ru/?2575836', target='_blank')
+              //-   img(src='http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&im=605', border='0', alt='HotLog')
 
           .col-sm.footer-col
             .kolobok
