--- a/includes/media.pug
+++ b/includes/media.pug
@@ -136,7 +136,11 @@ block content
             div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
           li
             div.icon.web.telegram.org
-            a(href='https://t.me/music_breakbeat', target='_blank') t/hit_bit
+            a(href='https://t.me/music_breakbeat', target='_blank') t/music_breakbeat (hit_bit)
+            i.fainfo.fab.fa-telegram
+          li
+            div.icon.web.telegram.org
+            a(href='https://t.me/music_hit_zakladki', target='_blank') t/music_hit_zakladki
             i.fainfo.fab.fa-telegram
       .group
         .group-title
