--- a/includes/media.pug
+++ b/includes/media.pug
@@ -13,13 +13,13 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning Плеер (ТОП-100) playlist.2019-04
+          span.badge.badge-warning Плеер.ТОП.зарубежная (playlist.2019-04)
         ul
           li
           // тут код плеера
           #player(style='height:60px;width:240px')
             script.
-              var player = new Playerjs({id:"player", file:"https://zakladki.github.io/playlist.txt"});
+              var player = new Playerjs({id:"player", file:"https://zakladki.github.io/playlist1zap.txt"});
           // тут код плеера
       .group
         .group-title
