--- a/includes/media.pug
+++ b/includes/media.pug
@@ -24,13 +24,13 @@ block content
           li
             div.icon.a0download
             a(href='https://turbo.to/gu3ln64vy8ua.html', target='_blank') Скачать_сборник_часть-1
-            a(href='https://www.youtube.com/', target='_blank')
+            a(href='https://youtu.be/A4TSFq5P4O8', target='_blank')
               div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как скачать', alt='')
             div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
           li
             div.icon.a0download
             a(href='https://turbo.to/8epffn7os44f.html', target='_blank') Скачать_сборник_часть-2
-            a(href='https://www.youtube.com/', target='_blank')
+            a(href='https://youtu.be/A4TSFq5P4O8', target='_blank')
               div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как скачать', alt='')
             div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
 
