--- a/includes/media.pug
+++ b/includes/media.pug
@@ -13,26 +13,28 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning Плеер.ТОП.зарубежная playlist.2019-04
+          span.badge.badge-warning Плеер.ТОП.зарубежная playlist.2019.04
         ul
           li
-          // тут код плеера
-          #player(style='height:60px;width:240px')
-            script.
-              var player = new Playerjs({id:"player", file:"https://zakladki.github.io/playlist1zap.txt"});
+            // тут код плеера
+            #player(style='height:60px;width:240px')
+              script.
+                var player = new Playerjs({id:"player", file:"https://zakladki.github.io/playlist1zap.txt"});
 
           li
             div.icon.a0download
-            a(href='https://turbo.to/gu3ln64vy8ua.html', target='_blank') Скачать_сборник_часть-1
+            a(href='https://turbo.to/m8kdm5toer7h.html', target='_blank') Скачать_часть-1
+            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+            a(href='https://turbo.to/lfpz10mc11cz.html', target='_blank') Скачать_часть-2
             a(href='https://youtu.be/A4TSFq5P4O8', target='_blank')
               div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как скачать', alt='')
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
           li
             div.icon.a0download
-            a(href='https://turbo.to/8epffn7os44f.html', target='_blank') Скачать_сборник_часть-2
+            a(href='https://turbo.to/7trgjc8n6q8u.html', target='_blank') Скачать_часть-3
+            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+            a(href='https://turbo.to/83ms14po83fu.html', target='_blank') Скачать_часть-4
             a(href='https://youtu.be/A4TSFq5P4O8', target='_blank')
               div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как скачать', alt='')
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
 
       .group
         .group-title
