--- a/includes/programs.pug
+++ b/includes/programs.pug
@@ -30,7 +30,6 @@ block content
             div.icon.a0youtubeinform(title='Видео информация', alt='')
             a(href='https://youtu.be/BdZQy6upWFc', target='_blank') Настройка сайта ZAKLADOK
             div.icontooinfo.a0repa3(title='Как быстро настроить ZAKLADKI на компьютере, ноутбуке, смартфоне', alt='')
-
       .group
         .group-title
           span.badge.badge-warning Торрент-программы
@@ -41,7 +40,6 @@ block content
           li
             div.icon.acestream.org
             a(href='http://www.acestream.org/', target='_blank') Скачать Acestream плеер
-
       .group
         .group-title
           span.badge.badge-warning Загрузить мессенджеры
@@ -55,6 +53,26 @@ block content
           li
             div.icon.skype
             a(href='https://www.skype.com/ru/get-skype/', target='_blank') Скачать SKYPE
+      .group
+        .group-title
+          span.badge.badge-warning Загрузить браузеры
+        ul
+          li
+            div.icon.prog_GoogleChrome
+            a(href='https://www.google.com/intl/ru_ALL/chrome/', target='_blank') Google Chrome
+          li
+            div.icon.prog_Opera
+            a(href='https://www.opera.com/ru/download', target='_blank') Opera
+          li
+            div.icon.prog_firefox
+            a(href='https://www.mozilla.org/uk/firefox/new/', target='_blank') Mozilla Firefox
+      .group
+        .group-title
+          span.badge.badge-warning Для браузеров веб-плеер
+        ul
+          li
+            div.icon.prog_AdobeFlashPlayer
+            a(href='https://get.adobe.com/ru/flashplayer/', target='_blank') Adobe Flash Player
 
     .col-sm
       .group
