--- a/includes/index.pug
+++ b/includes/index.pug
@@ -382,8 +382,13 @@ block content
       .group
         .group-title
           a(href='http://zakladki.at.ua/', target='_blank')
-            span.badge.badge-danger Обнова в закладках: v.2019-03-23
+            span.badge.badge-danger Обнова в закладках: v.2019-04-01
         ul
+          li
+            div.icon.a0info-opis5(title='Полезная информация', alt='')
+            div.icon.a0youtubeinform(title='Видео информация', alt='')
+            a(href='https://www.youtube.com/watch?v=4cZAhBPkCVU', target='_blank') Прикол на ВЫБОРАХ
+            div.icontooinfo.a0repa3(title='У селі на Рівненщині понад 2,5 тисячі жителів носять однакове прізвище', alt='')
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.a0youtubeinform(title='Видео информация', alt='')
