--- a/includes/shops.pug
+++ b/includes/shops.pug
@@ -95,8 +95,7 @@ block content
             a(href='https://letyshops.com/r/stylus-4qh7st5csxogcc', target='_blank') stylus.ua`
           li
             div.icon.skidka.ua
-            a(href='https://letyshops.com/r/skidka-ua-4qh7st5csxs048', target='_blank') skidka.ua`
-          // <li><img class="icon" src="img/privatmarket.ua.ico" alt="privatmarket"><a href="https://letyshops.com/r/privatmarket-4qh7st5csxwko0" target="_blank">privatmarket.ua</a></li>
+            a(href='http://www.skidka.ua/', target='_blank') skidka.ua
           li
             div.icon.foxtrot.com.ua
             a(href='https://letyshops.com/r/fokstrot-ua-4qh7st5csxwko0', target='_blank') foxtrot.com.ua`
