--- a/includes/shops.pug
+++ b/includes/shops.pug
@@ -133,6 +133,7 @@ block content
           li
             div.icon.master-plus.com.ua
             a(href='https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4', target='_blank') master-plus.com.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет магазин запчастей для стиральных машин, холодильников и другой бытовой техники. ТМ Мастер-Плюс', alt='')
     .col-sm
       .group
         .group-title
