--- a/includes/shops.pug
+++ b/includes/shops.pug
@@ -173,6 +173,10 @@ block content
           li
             div.icon.berni.com.ua
             a(href='https://letyshops.com/r/berni-4qh7st5cszy8k4', target='_blank') berni.com.ua`
+          li
+            div.icon.garnamama.com
+            a(href='https://letyshops.com/r/garnamama-ua-4qh7st5x2qecgk', target='_blank') garnamama.com`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Купить детскую одежду в Киеве от украинских производителей. Доставка детской одежды по Киеву и всей Украине', alt='')
       .group
         .group-title
           span.badge.badge-success Косметика/Парфюмерия/Ювелир
@@ -221,6 +225,7 @@ block content
           li
             div.icon.med-magazin.ua
             a(href='https://letyshops.com/r/med-magazin-ua-4qh7st5oclk40c', target='_blank') med-magazin.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине', alt='')
       .group
         .group-title
           span.badge.badge-success Сад/Огород
@@ -228,6 +233,7 @@ block content
           li
             div.icon.florium.ua
             a(href='https://letyshops.com/r/florium-ua-4qh7st5ocnmsoc', target='_blank') florium.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Флориум - Интернет магазин семян, саженцев садовых, комнатных растений и цветов в Украине.', alt='')
       .group
         .group-title
           span.badge.badge-success Образование (изучение языков)
