--- a/includes/index.pug
+++ b/includes/index.pug
@@ -382,8 +382,13 @@ block content
       .group
         .group-title
           a(href='http://zakladki.at.ua/', target='_blank')
-            span.badge.badge-danger Обнова в закладках: v.2019-04-01
+            span.badge.badge-danger Обнова в закладках: v.2019-04-04
         ul
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.garnamama.com
+            a(href='https://letyshops.com/r/garnamama-ua-4qh7st5x2qecgk', target='_blank') garnamama.com`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Купить детскую одежду в Киеве от украинских производителей. Доставка детской одежды по Киеву и всей Украине', alt='')
           li
             div.icon.a0info-opis5(title='Полезная информация', alt='')
             div.icon.a0youtubeinform(title='Видео информация', alt='')
