--- a/includes/index.pug
+++ b/includes/index.pug
@@ -382,8 +382,38 @@ block content
       .group
         .group-title
           a(href='http://zakladki.at.ua/', target='_blank')
-            span.badge.badge-danger Обнова в закладках: v.2019-04-04
+            span.badge.badge-danger Обновки в закладках: v.2019-04-04
         ul
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.ru.airbnb.com
+            a(href='https://letyshops.com/r/airbnb-4qh7st5x4ayoc0', target='_blank') ru.airbnb.com`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Сдайте дом, квартиру или комнату и получайте дополнительный доход. Создание объявления абсолютно бесплатно. Отпускное жилье, дома, впечатления и места: находите приключения поблизости или далеко от дома, открывайте для себя уникальное жилье, впечатления и места по всему миру. ', alt='')
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.starkbud.com.ua
+            a(href='https://letyshops.com/r/starkbud-ua-4qh7st5x3rwgk4', target='_blank') starkbud.com.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Строительные материалы по лучшим ценам - интернет-магазин СтаркБуд', alt='')
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.telemart.ua
+            a(href='https://', target='_blank') telemart.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет-магазин Телемарт — магазин техники, электроники и комплектующих для ПК в Украине', alt='')
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.avic.ua
+            a(href='https://letyshops.com/r/avic-ua-4qh7st5x3jc4cc', target='_blank') avic.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. AVIC - удобный интернет магазин - лучшие цены, доставка по Украине, широкий ассортимент товаров, скидки и распродажи! 10 лет на рынке продаж!', alt='')
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.dressa.com.ua
+            a(href='https://letyshops.com/r/dressa-ua-4qh7st5x3aqswk', target='_blank') dressa.com.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Dressa - Стильная и модная женская одежда, обувь и аксессуары на любой сезон от производителя.', alt='')
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.maximoda.com.ua
+            a(href='https://letyshops.com/r/maximoda-ua-4qh7st5x32g40c', target='_blank') maximoda.com.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. MaxiModa - интернет-магазин модной женской одежды, обуви и аксессуаров из Украины (Киев, Мелитополь)', alt='')
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.garnamama.com
