--- a/includes/programs.pug
+++ b/includes/programs.pug
@@ -24,7 +24,7 @@ block content
 
       .group
         .group-title
-          span.badge.badge-warning Всяки настройки
+          span.badge.badge-warning Всякие настройки
         ul
           li
             div.icon.a0youtubeinform(title='Видео информация', alt='')
