--- a/includes/shops.pug
+++ b/includes/shops.pug
@@ -109,11 +109,35 @@ block content
             div.icon.xiaomi.ua
             a(href='https://letyshops.com/r/xiaomi-ua-4qh7st5csy680o', target='_blank') xiaomi.ua`
           li
+            div.icon.telemart.ua
+            a(href='https://', target='_blank') telemart.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет-магазин Телемарт — магазин техники, электроники и комплектующих для ПК в Украине', alt='')
+          li
             div.icon.shop.kyivstar.ua
             a(href='https://letyshops.com/r/kyivstar-4qh7st5ct12cog', target='_blank') shop.kyivstar.ua`
           li
+            div.icon.avic.ua
+            a(href='https://letyshops.com/r/avic-ua-4qh7st5x3jc4cc', target='_blank') avic.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. AVIC - удобный интернет магазин - лучшие цены, доставка по Украине, широкий ассортимент товаров, скидки и распродажи! 10 лет на рынке продаж!', alt='')
+          li
             div.icon.coffeeok.com.ua
             a(href='https://letyshops.com/r/kofeyok-ua-4qh7st5csy680o', target='_blank') coffeeok.com.ua`
+      .group
+        .group-title
+          span.badge.badge-success Запчасти, инструменты, приборы
+        ul
+          li
+            div.icon.master-plus.com.ua
+            a(href='https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4', target='_blank') master-plus.com.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. ТМ Мастер-Плюс - Интернет магазин запчастей для стиральных машин, холодильников и другой бытовой техники.', alt='')
+      .group
+        .group-title
+          span.badge.badge-success Строительные материалы
+        ul
+          li
+            div.icon.starkbud.com.ua
+            a(href='https://letyshops.com/r/starkbud-ua-4qh7st5x3rwgk4', target='_blank') starkbud.com.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Строительные материалы по лучшим ценам - интернет-магазин СтаркБуд', alt='')
       .group
         .group-title
           span.badge.badge-success Автотовары
@@ -130,10 +154,6 @@ block content
           li
             div.icon.avtodiski.net.ua
             a(href='https://letyshops.com/r/avtodiski-ua-4qh7st5csygwc8', target='_blank') avtodiski.net.ua`
-          li
-            div.icon.master-plus.com.ua
-            a(href='https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4', target='_blank') master-plus.com.ua`
-            div.icontooinfo.a0repa3(title='Раздел-Магазины. Интернет магазин запчастей для стиральных машин, холодильников и другой бытовой техники. ТМ Мастер-Плюс', alt='')
     .col-sm
       .group
         .group-title
@@ -154,6 +174,14 @@ block content
           li
             div.icon.asos.com
             a(href='https://letyshops.com/r/asos-4qh7st5csyw48o', target='_blank') asos.com`
+          li
+            div.icon.maximoda.com.ua
+            a(href='https://letyshops.com/r/maximoda-ua-4qh7st5x32g40c', target='_blank') maximoda.com.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. MaxiModa - интернет-магазин модной женской одежды, обуви и аксессуаров из Украины (Киев, Мелитополь)', alt='')
+          li
+            div.icon.dressa.com.ua
+            a(href='https://letyshops.com/r/dressa-ua-4qh7st5x3aqswk', target='_blank') dressa.com.ua`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Dressa - Стильная и модная женская одежда, обувь и аксессуары на любой сезон от производителя.', alt='')
       .group
         .group-title
           span.badge.badge-success Детские товары
@@ -282,3 +310,11 @@ block content
           li
             div.icon.rentalcars.com
             a(href='https://letyshops.com/r/rentalcars-4qh7st5ct0qok0', target='_blank') rentalcars.com`
+      .group
+        .group-title
+          span.badge.badge-success Дом/Квартира/Комната
+        ul
+          li
+            div.icon.ru.airbnb.com
+            a(href='https://letyshops.com/r/airbnb-4qh7st5x4ayoc0', target='_blank') ru.airbnb.com`
+            div.icontooinfo.a0repa3(title='Раздел-Магазины. Сдайте дом, квартиру или комнату и получайте дополнительный доход. Создание объявления абсолютно бесплатно. Отпускное жилье, дома, впечатления и места: находите приключения поблизости или далеко от дома, открывайте для себя уникальное жилье, впечатления и места по всему миру. ', alt='')
