--- a/includes/index.pug
+++ b/includes/index.pug
@@ -386,6 +386,11 @@ block content
         ul
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
+            div.icon.telemetr.me
+            a(href='https://telemetr.me/r/yQsP9VE/', target='_blank') telemetr.me`
+            div.icontooinfo.a0repa3(title='Раздел-Социум. Телеметр - аналитика/каталог/прокачка Телеграм-каналов', alt='')
+          li
+            div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.ru.airbnb.com
             a(href='https://letyshops.com/r/airbnb-4qh7st5x4ayoc0', target='_blank') ru.airbnb.com`
             div.icontooinfo.a0repa3(title='Раздел-Магазины. Сдайте дом, квартиру или комнату и получайте дополнительный доход. Создание объявления абсолютно бесплатно. Отпускное жилье, дома, впечатления и места: находите приключения поблизости или далеко от дома, открывайте для себя уникальное жилье, впечатления и места по всему миру. ', alt='')
