--- a/includes/social.pug
+++ b/includes/social.pug
@@ -24,12 +24,27 @@ block content
           li
             div.icon.skype
             a(href='https://www.skype.com/ru/get-skype/', target='_blank') Скачать SKYPE
+            
+      .group
+        .group-title
+          span.badge.badge-warning Прокачать свой TELEGRAM (канал)
+        ul
+          li
+            div.icon.telemetr.me
+            a(href='https://telemetr.me/r/yQsP9VE/', target='_blank') telemetr.me`
+            div.icontooinfo.a0repa3(title='Раздел-Социум. Телеметр - аналитика/каталог/прокачка Телеграм-каналов', alt='')
+          li
+            div.icon.tgstat.com
+            a(href='https://uk.tgstat.com/', target='_blank') tgstat.com
+            
+            
           // тут реклама от ГУГЛ - 3 колонки-вконце 336-280
           script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
           ins.adsbygoogle(style='display:inline-block;width:336px;height:280px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='7850904161')
           script.
             (adsbygoogle = window.adsbygoogle || []).push({});
           // тут реклама от ГУГЛ
+          
     .col-sm
       .group
         .group-title
