--- a/includes/index.pug
+++ b/includes/index.pug
@@ -388,7 +388,7 @@ block content
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.telemetr.me
             a(href='https://telemetr.me/r/yQsP9VE/', target='_blank') telemetr.me`
-            div.icontooinfo.a0repa3(title='Раздел-Социум. Телеметр - аналитика/каталог/прокачка Телеграм-каналов', alt='')
+            div.icontooinfo.a0repa3(title='Раздел-Социум. Раздел-Социум. Телеметр - аналитика/каталог Телеграм-каналов (нужно иметь +500 подписчиков)', alt='')
           li
             div.icon.a0info-add2(title='Добавлен в ZAKLADKI', alt='')
             div.icon.ru.airbnb.com
