--- a/includes/social.pug
+++ b/includes/social.pug
@@ -32,11 +32,10 @@ block content
           li
             div.icon.telemetr.me
             a(href='https://telemetr.me/r/yQsP9VE/', target='_blank') telemetr.me`
-            div.icontooinfo.a0repa3(title='Раздел-Социум. Телеметр - аналитика/каталог/прокачка Телеграм-каналов', alt='')
+            div.icontooinfo.a0repa3(title='Раздел-Социум. Телеметр - аналитика/каталог Телеграм-каналов (нужно иметь +500 подписчиков)', alt='')
           li
             div.icon.tgstat.com
             a(href='https://uk.tgstat.com/', target='_blank') tgstat.com
-            
             
           // тут реклама от ГУГЛ - 3 колонки-вконце 336-280
           script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
