--- a/includes/social.pug
+++ b/includes/social.pug
@@ -32,11 +32,24 @@ block content
           li
             div.icon.telemetr.me
             a(href='https://telemetr.me/r/yQsP9VE/', target='_blank') telemetr.me`
-            div.icontooinfo.a0repa3(title='Раздел-Социум. Телеметр - аналитика/каталог Телеграм-каналов (нужно иметь +500 подписчиков)', alt='')
+            div.icontooinfo.a0repa3(title='Раздел-Социум. Телеметр - аналитика/каталог Телеграм-каналов (Условие: free + нужно иметь 500 подписчиков)', alt='')
+            span.opisi free500+rek+stat
           li
             div.icon.tgstat.com
             a(href='https://uk.tgstat.com/', target='_blank') tgstat.com
-            
+            div.icontooinfo.a0repa3(title='Раздел-Социум. Добавление канала в каталог бесплатно/статистика/реклама (Условие: БЕСПЛАТНО добавить любой канал в каталог! +Рекламная площадка УДОБНАЯ)', alt='')
+            span.opisi free0+rek+stat
+          li
+            div.icon.telega.in
+            a(href='https://telega.in/?ref=Tjy-BcZy', target='_blank') telega.in`
+            div.icontooinfo.a0repa3(title='Раздел-Социум. Рекламная площадка. (Условие: добавить канал +100 подписчиков.)', alt='')
+            span.opisi free100+rek            
+          li
+            div.icon.tgrm.su
+            a(href='https://tgrm.su/channels/', target='_blank') tgrm.su
+            div.icontooinfo.a0repa3(title='Раздел-Социум. Прокачка канала. (Условие: чтобы добавить любой канал в каталог +79 рублей. Поднятия канала в ТОП: 250р/три дня; 500р/на неделю; 1500/на месяц)', alt='')
+            span.opisi 79р.+top250р.
+
           // тут реклама от ГУГЛ - 3 колонки-вконце 336-280
           script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
           ins.adsbygoogle(style='display:inline-block;width:336px;height:280px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='7850904161')
